# my_cpp

./: .gitignore  README.md  README_template.md  log.txt  repos.txt
EvanatorM/EvanatorM_ScuffedMinecraft/: README.md  ScuffedMinecraft.sln
EvanatorM/EvanatorM_ScuffedMinecraft/Dependencies/include/: OpenSimplexNoise.hh
EvanatorM/EvanatorM_ScuffedMinecraft/ScuffedMinecraft/src/: Application.cpp  Block.cpp  Block.h  Blocks.h  Camera.cpp  Camera.h  Chunk.h  NoiseSettings.cpp  Planet.cpp  Planet.h  Shader.cpp  Shader.h  TupleHash.h  WorldGen.cpp  WorldGen.h
Kofybrek/Kofybrek_1000-subscribers-visualization/Source/: Main.py
Kofybrek/Kofybrek_Flappy-bird-AI/Source/: Pipes.cpp  PipesManager.cpp
Kofybrek/Kofybrek_Minesweeper/Source/: GetCell.cpp  Main.cpp
Kofybrek/Kofybrek_Neural-network/Source/: DrawText.cpp  ForwardPropagation.cpp  GetMinElement.cpp
Kofybrek/Kofybrek_New-Raycasting/Source/: AngleFunctions.cpp  ConvertMapSketch.cpp  Decoration.cpp  MapCollision.cpp
Kofybrek/Kofybrek_Pathfinding/Source/: BFS.cpp  Dijkstra.cpp  DrawMap.cpp  GetCell.cpp  GetMouseCell.cpp
Kofybrek/Kofybrek_Raycasting/Source/: DegToRad.cpp  GetDegrees.cpp  RadToDeg.cpp  Steven.cpp
Kofybrek/Kofybrek_Snake-game-AI/Source/: DrawText.cpp  UpdateGame.cpp
Kofybrek/Kofybrek_Tetris/Source/: DrawText.cpp  GetTetromino.cpp  GetWallKickData.cpp  Main.cpp
johnbuffer/johnBuffer_Array/: CMakeLists.txt
johnbuffer/johnBuffer_Array/src/: main.cpp
johnbuffer/johnBuffer_EzBench/: .gitignore
johnbuffer/johnBuffer_Hord/: README.md
johnbuffer/johnBuffer_Hord/include/: agent.hpp  display_manager.hpp  render.hpp
johnbuffer/johnBuffer_Hord/src/: display_manager.cpp  main.cpp
johnbuffer/johnBuffer_Light/: CMakeLists.txt
johnbuffer/johnBuffer_MapGenerator/: Graph.cpp  MP2DContainer.cpp  MapPoint.cpp  MapPoint.hpp  Region.cpp  RegionMap.cpp  RegionMap.hpp  main.cpp  mathematicalWay.cpp  staggering.hpp  utils.cpp  utils.hpp
johnbuffer/johnBuffer_PathFinder/: CMakeLists.txt
johnbuffer/johnBuffer_PathFinder/include/: graphic_utils.hpp
johnbuffer/johnBuffer_ZTyper2/include/: textured_va.hpp
my_stuff/simple_game/: CMakeLists.txt  main.cpp  main_bkp.cpp
random/Anubisss_game-poc/: Character.cpp  Game.cpp  GameObject.h  Main.cpp  Map.h  Tile.h
random/Kofybrek_Snake-game-AI/Source/: AddFood.cpp  ForwardPropagation.cpp
random/WorldEditor50_snakeAI/snakeAI/: CMakeLists.txt  agent.h  axis.cpp  axis.h  common.cpp  common.h  main.cpp  mainwindow.cpp  mainwindow.h
repos/: README.md  README_template.md  log.txt
repos/johnbuffer/johnBuffer_FastVersatileContainer/: .gitignore
repos/johnbuffer/johnBuffer_Hord/: CMakeLists.txt
repos/johnbuffer/johnBuffer_JsonParser/: README.md  json_objects.hpp  jsonparser.hpp  main.cpp
repos/johnbuffer/johnBuffer_MapGenerator/: .gitignore  Graph.hpp  MP2DContainer.hpp  MapGenerator.cpp  MapGenerator.hpp  Region.hpp  connexity.cpp  connexity.hpp
repos/random/Anubisss_game-poc/: Character.h  Game.h  Map.cpp
(+128 files in other folders)
